--- a/pages/practices.html
+++ b/pages/practices.html
@@ -3,41 +3,142 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Практики</title>
+  <title>Практики - Учебный опыт</title>
   <link rel="stylesheet" href="../style/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-<div id="header">ХЭДЕР</div>
-<div id="menu">
-  <ul>
-    <li><a href="../index.html">Главная</a></li>
-    <li><a href="news.html">Новости</a></li>
-    <li><a href="practices.html" class="active">Практики</a></li>
-    <li><a href="goods.html">Товары</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
-  </ul>
-</div>
-<div id="content">
-  <h2>Учебные и научные практики</h2>
-  
-  <div class="practice-item">
-    <h3>Научно-исследовательская практика</h3>
-    <p>Проходила на кафедре экономической теории под руководством профессора Иванова А.И. Тема исследования: "Анализ эффективности цифровых платформ для малого бизнеса в период экономических санкций". В рамках практики проводился сбор и анализ данных по 150 компаниям малого бизнеса, использовались методы регрессионного анализа и машинного обучения для выявления ключевых факторов успеха.</p>
-    <p><strong>Результат:</strong> Подготовлена научная статья для журнала "Вопросы экономики", разработана модель прогнозирования адаптационного потенциала предприятий.</p>
-  </div>
-  
-  <div class="practice-item">
-    <h3>Производственная практика</h3>
-    <p>Практика в Департаменте стратегического анализа Центрального банка РФ. Участие в проекте по анализу устойчивости банковской системы к киберрискам. Основные задачи: анализ международного опыта регулирования, моделирование сценариев кибератак на финансовые институты, подготовка аналитических записок для руководства.</p>
-    <p><strong>Результат:</strong> Разработана методика оценки киберрисков для банков разного масштаба, рекомендации вошли в проект новых нормативных документов ЦБ.</p>
-  </div>
-  
-  <div class="practice-item">
-    <h3>Педагогическая практика</h3>
-    <p>Проведение семинаров по курсу "Эконометрика" для студентов 2 курса бакалавриата. Разработка учебных материалов, проведение консультаций, проверка домашних заданий. Подготовил и провел серию мастер-классов по работе с программой R для экономического анализа.</p>
-    <p><strong>Результат:</strong> Разработаны интерактивные учебные материалы, которые были рекомендованы кафедрой для использования в следующем учебном году.</p>
-  </div>
-</div>
-<div id="footer">ФУТЕР</div>
+  <header class="site-header">
+    <div class="container">
+      <h1>Учебные практики</h1>
+      <p>Опыт и профессиональное развитие РТУ МИРЭА</p>
+    </div>
+  </header>
+
+  <nav class="main-nav">
+    <div class="nav-container">
+      <ul class="nav-menu">
+        <li class="nav-item"><a href="../index.html" class="nav-link"><i class="fas fa-home"></i> Главная</a></li>
+        <li class="nav-item"><a href="news.html" class="nav-link"><i class="fas fa-newspaper"></i> Новости</a></li>
+        <li class="nav-item"><a href="practices.html" class="nav-link active"><i class="fas fa-briefcase"></i> Практики</a></li>
+        <li class="nav-item"><a href="goods.html" class="nav-link"><i class="fas fa-shopping-cart"></i> Товары</a></li>
+        <li class="nav-item"><a href="contacts.html" class="nav-link"><i class="fas fa-address-book"></i> Контакты</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <main class="main-content">
+    <header class="page-header">
+      <h2>Мои учебные практики</h2>
+      <p>Профессиональный опыт и навыки, полученные во время обучения в РТУ МИРЭА</p>
+    </header>
+
+    <div class="practices-container">
+      <article class="practice-card">
+        <div class="practice-icon">
+          <i class="fas fa-flask"></i>
+        </div>
+        <div class="practice-content">
+          <h3 class="practice-title">Научно-исследовательская практика</h3>
+          <div class="practice-meta">
+            <span><i class="far fa-calendar"></i> Сентябрь 2024 - Декабрь 2024</span>
+            <span><i class="fas fa-university"></i> РТУ МИРЭА</span>
+          </div>
+          <p>Проходила на кафедре экономической теории РТУ МИРЭА под руководством профессора Иванова А.И. Тема исследования: "Анализ эффективности цифровых платформ для малого бизнеса в период экономических санкций".</p>
+          <p class="mt-2"><strong>Результат:</strong> Подготовлена научная статья для журнала "Вопросы экономики", разработана модель прогнозирования адаптационного потенциала предприятий.</p>
+        </div>
+      </article>
+
+      <article class="practice-card">
+        <div class="practice-icon">
+          <i class="fas fa-chart-line"></i>
+        </div>
+        <div class="practice-content">
+          <h3 class="practice-title">Производственная практика</h3>
+          <div class="practice-meta">
+            <span><i class="far fa-calendar"></i> Июнь 2024 - Август 2024</span>
+            <span><i class="fas fa-building"></i> Центральный банк РФ</span>
+          </div>
+          <p>Практика в Департаменте стратегического анализа Центрального банка РФ. Участие в проекте по анализу устойчивости банковской системы к киберрискам.</p>
+          <p class="mt-2"><strong>Результат:</strong> Разработана методика оценки киберрисков для банков разного масштаба, рекомендации вошли в проект новых нормативных документов ЦБ.</p>
+        </div>
+      </article>
+
+      <article class="practice-card">
+        <div class="practice-icon">
+          <i class="fas fa-chalkboard-teacher"></i>
+        </div>
+        <div class="practice-content">
+          <h3 class="practice-title">Педагогическая практика</h3>
+          <div class="practice-meta">
+            <span><i class="far fa-calendar"></i> Февраль 2024 - Май 2024</span>
+            <span><i class="fas fa-user-graduate"></i> РТУ МИРЭА</span>
+          </div>
+          <p>Проведение семинаров по курсу "Эконометрика" для студентов 2 курса бакалавриата РТУ МИРЭА. Разработка учебных материалов, проведение консультаций, проверка домашних заданий.</p>
+          <p class="mt-2"><strong>Результат:</strong> Разработаны интерактивные учебные материалы, которые были рекомендованы кафедрой для использования в следующем учебном году.</p>
+        </div>
+      </article>
+
+      <article class="practice-card">
+        <div class="practice-icon">
+          <i class="fas fa-globe"></i>
+        </div>
+        <div class="practice-content">
+          <h3 class="practice-title">Международная стажировка</h3>
+          <div class="practice-meta">
+            <span><i class="far fa-calendar"></i> Январь 2024</span>
+            <span><i class="fas fa-plane"></i> Берлинский университет</span>
+          </div>
+          <p>Краткосрочная стажировка в Берлинском университете по программе обмена РТУ МИРЭА. Участие в исследованиях по сравнительному анализу экономических систем ЕС и России.</p>
+          <p class="mt-2"><strong>Результат:</strong> Подготовлен аналитический отчет "Перспективы цифровой экономики в странах ЕС", выступление на международной студенческой конференции.</p>
+        </div>
+      </article>
+    </div>
+
+    <aside class="card mt-4">
+      <h3><i class="fas fa-award"></i> Сертификаты и достижения</h3>
+      <div class="skills-grid grid-3 mt-2">
+        <div class="skill-card">
+          <div class="skill-icon"><i class="fas fa-certificate"></i></div>
+          <div>
+            <h4>Data Science Specialization</h4>
+            <p>Coursera, 2024</p>
+          </div>
+        </div>
+        <div class="skill-card">
+          <div class="skill-icon"><i class="fas fa-certificate"></i></div>
+          <div>
+            <h4>Эконометрика продвинутый уровень</h4>
+            <p>РТУ МИРЭА, 2023</p>
+          </div>
+        </div>
+        <div class="skill-card">
+          <div class="skill-icon"><i class="fas fa-certificate"></i></div>
+          <div>
+            <h4>Бизнес-английский C1</h4>
+            <p>Cambridge, 2023</p>
+          </div>
+        </div>
+      </div>
+    </aside>
+  </main>
+
+  <footer class="site-footer">
+    <div class="footer-content">
+      <div class="footer-info">
+        <h3>Учебные практики</h3>
+        <p>РТУ МИРЭА | Экономический факультет</p>
+        <p>© 2025 Все права защищены</p>
+      </div>
+      <div class="footer-links">
+        <a href="../index.html" class="footer-link">Главная</a>
+        <a href="news.html" class="footer-link">Новости</a>
+        <a href="contacts.html" class="footer-link">Контакты</a>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>Документы по практикам доступны по запросу в деканате РТУ МИРЭА</p>
+    </div>
+  </footer>
 </body>
 </html>
